--- a/_includes/default_layout.html
+++ b/_includes/default_layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Odoop : Opower's suite of useful Hadoop ecosystem libraries" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ stylesheet_base }}stylesheets/stylesheet.css">
 
     <title>Opower : Odoop : {{ page.title }}</title>
   </head>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/jeffkole/odoop">View on GitHub</a>
 
-          <h1 id="project_title"><a href="/">Odoop</a></h1>
+          <h1 id="project_title"><a href="https://github.com/pages/jeffkole/odoop">Odoop</a></h1>
           <h2 id="project_tagline">Opower's suite of useful Hadoop ecosystem libraries</h2>
 
         </header>
@@ -39,7 +39,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
