--- a/_includes/default_layout.html
+++ b/_includes/default_layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Odoop : Opower's suite of useful Hadoop ecosystem libraries" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ stylesheet_base }}stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ relative_root }}/stylesheets/stylesheet.css">
 
     <title>Opower : Odoop : {{ page.title }}</title>
   </head>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/jeffkole/odoop">View on GitHub</a>
 
-          <h1 id="project_title"><a href="https://github.com/pages/jeffkole/odoop">Odoop</a></h1>
+          <h1 id="project_title"><a href="{{ relative_root }}/">Odoop</a></h1>
           <h2 id="project_tagline">Opower's suite of useful Hadoop ecosystem libraries</h2>
 
         </header>
@@ -35,7 +35,8 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">&copy; 2012 <a href="http://opower.com">Opower</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a>,
+        using the Slate theme by Jason Costello (<a href="http://twitter.com/jsncostello">@jsncostello</a>)</p>
       </footer>
     </div>
 
